<resources>
    <string name="app_name">Care Portal</string>
    <string name="version">V5.0</string>
    <string name="action_settings">Settings</string>
    <string name="carbs_given">Carbs Given(g)</string>
    <string name="insulin_given">Insulin Given(units)</string>
    <string name="eating_in">Eating In</string>
    <string name="additional_notes">Additional Notes, Comments</string>
    <string name="event_type">Event Type</string>
    <string name="meter">meter</string>
    <string name="sensor">sensor</string>
    <string name="glucose_reading">Glucose Reading</string>
    <string name="entered_by">Entered By</string>
    <string name="event_time">Event Time</string>
    <string name="now">Now</string>
    <string name="other">Other</string>
    <string name="set_time">Set Time</string>
    <string name="set_date">Set Date</string>
    <string name="submit">Submit</string>
    <string name ="mongodbConnectionstringdefault">mongodb://&lt;username&gt;:&lt;password>@&lt;server&gt;:&lt;port&gt;/&lt;database&gt;</string>
    <string name ="mongodbKey">mongoDBString</string>
    <string name ="userNameKey">userNameString</string>
    <string-array name="event_types">
        <item>BG Check</item>
        <item>Snack Bolus</item>
        <item>Meal Bolus</item>
        <item>Correction Bolus</item>
        <item>Carb Correction</item>
        <item>Note</item>
        <item>Question</item>
        <item>Exercise</item>
        <item>Pump Site Change</item>
        <item>Dexcom Sensor Start</item>
        <item>D.A.D. Alert</item>
    </string-array>
    <string-array name="measurement_method">
        <item>Meter</item>
        <item>Sensor</item>
    </string-array>
    <string-array name="eating_in">
        <item>Time in minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>60 minutes</item>
    </string-array>
</resources>
